<resources>
    <string name="app_name">LapTimer</string>

    <string name="default_clock_string">00:00</string>
    <string name="default_counter">0</string>

    //main activity action bar
    <string name="main_actionbar_addition">Add</string>
    <string name="main_activity_deletion">Delete</string>

    //list items
    <string name="dummy_label_list_item">Dummy String</string>
    <string name="rounds_list_item">rounds</string>
    <string name="description_1_list_item">timers for a duration of </string>
    <string name="description_2_list_item">seconds</string>
    <string name="default_count_empty">0</string>
    <!-- content descriptors-->
    <string name="cd_startButton_list_item"> Starts the timer</string>
    <string name="cd_expandbutton_list_item">Expands/retracts the view</string>
    <!--actionbar -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>

    <!-- modifier activity-->
    <string name="filler_edit_text">Give a name!</string>
    <string name="repetition_counter_label">Repetitions</string>
    <string name="title_modification">Modify Timer</string>
    <string name="title_new_timer_definition">New Timer</string>
</resources>
