<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit_modifier"
        android:title="@string/edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/save_modifier"
        android:title="@string/save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/addition_modifier"
        android:title="@string/add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete_modifier"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"
        android:visible="false"/>

</menu>